src/main/java/se/group5/gen/CoBabyBoLParser.java
// Generated from /home/extratoast/IdeaProjects/babycobol-compiler/src/main/antlr/se/group5/CoBabyBoL.g4 by ANTLR 4.13.2
package se.group5.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CoBabyBoLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ACCEPT=2, ADD=3, ALTER=4, BY=5, CALL=6, COPY=7, DATA_DIVISION=8, 
		DELIMITED_BY=9, DISPLAY=10, DIVIDE=11, ELSE=12, END=13, EVALUATE=14, GIVING=15, 
		GO=16, GOTO=17, IDENTIFICATION_DIVISION=18, IF=19, LOOP=20, MOVE=21, MULTIPLY=22, 
		NEXT_SENTENCE=23, OF=24, OFF=25, ON_ERROR=26, PERFORM=27, PROCEED=28, 
		REPLACING=29, SIGNAL=30, SUBTRACT=31, THEN=32, TO=33, WITH_NO_ADVANCING=34, 
		SIZE=35, SPACE=36, SPACES=37, PROGRAM_ID=38, AUTHOR=39, INSTALLATION=40, 
		DATE_WRITTEN=41, DATE_COMPILED=42, SECURITY=43, FROM=44, HIGH_VALUES=45, 
		LOW_VALUES=46, REMAINDER=47, INTO=48, USING=49, BY_REFERENCE=50, BY_CONTENT=51, 
		BY_VALUE=52, THROUGH=53, TIMES=54, RETURNING=55, AS_PRIMITIVE=56, AS_STRUCT=57, 
		PICTURE=58, IS=59, LIKE=60, OCCURS=61, ALSO=62, VARYING=63, WHILE=64, 
		UNTIL=65, WHEN=66, OTHER=67, STOP=68, PROCEDURE_DIVISION=69, ZERO=70, 
		AND=71, OR=72, NOT=73, MATH_OP=74, EQ_OP=75, EQ=76, NEQ=77, LEQ=78, GEQ=79, 
		GT=80, LT=81, INTEGERLITERAL=82, NUMERICLITERAL=83, IDENTIFIER=84, LETTER=85, 
		DIGIT=86, ALPHANUMERIC=87, NONNUMERICLITERAL=88, WS=89, DOT=90, COMMA=91, 
		SOL=92, EOL=93, SIGN=94, LPAREN=95, RPAREN=96;
	public static final int
		RULE_program = 0, RULE_identification_division = 1, RULE_identification_clause = 2, 
		RULE_clause_name = 3, RULE_clause_value = 4, RULE_procedure_division = 5, 
		RULE_sentence = 6, RULE_statement = 7, RULE_data_division = 8, RULE_data_item = 9, 
		RULE_picture_clause = 10, RULE_like_clause = 11, RULE_occurs_clause = 12, 
		RULE_function = 13, RULE_accept = 14, RULE_alter = 15, RULE_goto = 16, 
		RULE_if = 17, RULE_perform = 18, RULE_signal = 19, RULE_copy = 20, RULE_display = 21, 
		RULE_add = 22, RULE_call = 23, RULE_divide = 24, RULE_move = 25, RULE_multiply = 26, 
		RULE_subtract = 27, RULE_loop = 28, RULE_evaluate = 29, RULE_next_sentence = 30, 
		RULE_stop = 31, RULE_atomic_through = 32, RULE_when_clause = 33, RULE_argument_literal = 34, 
		RULE_any_expression = 35, RULE_math_expr = 36, RULE_boolean_expression = 37, 
		RULE_atomic = 38, RULE_file_name = 39, RULE_procedure_name = 40, RULE_function_name = 41, 
		RULE_program_name = 42, RULE_representation = 43, RULE_level = 44, RULE_numeric_literal = 45, 
		RULE_integer_literal = 46, RULE_literal = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "identification_division", "identification_clause", "clause_name", 
			"clause_value", "procedure_division", "sentence", "statement", "data_division", 
			"data_item", "picture_clause", "like_clause", "occurs_clause", "function", 
			"accept", "alter", "goto", "if", "perform", "signal", "copy", "display", 
			"add", "call", "divide", "move", "multiply", "subtract", "loop", "evaluate", 
			"next_sentence", "stop", "atomic_through", "when_clause", "argument_literal", 
			"any_expression", "math_expr", "boolean_expression", "atomic", "file_name", 
			"procedure_name", "function_name", "program_name", "representation", 
			"level", "numeric_literal", "integer_literal", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\u2261\\u2261\\u2261'", null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'='", "'<>'", "'<='", 
			"'>='", "'>'", "'<'", null, null, null, null, null, null, null, null, 
			"'.'", "','", null, null, null, "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ACCEPT", "ADD", "ALTER", "BY", "CALL", "COPY", "DATA_DIVISION", 
			"DELIMITED_BY", "DISPLAY", "DIVIDE", "ELSE", "END", "EVALUATE", "GIVING", 
			"GO", "GOTO", "IDENTIFICATION_DIVISION", "IF", "LOOP", "MOVE", "MULTIPLY", 
			"NEXT_SENTENCE", "OF", "OFF", "ON_ERROR", "PERFORM", "PROCEED", "REPLACING", 
			"SIGNAL", "SUBTRACT", "THEN", "TO", "WITH_NO_ADVANCING", "SIZE", "SPACE", 
			"SPACES", "PROGRAM_ID", "AUTHOR", "INSTALLATION", "DATE_WRITTEN", "DATE_COMPILED", 
			"SECURITY", "FROM", "HIGH_VALUES", "LOW_VALUES", "REMAINDER", "INTO", 
			"USING", "BY_REFERENCE", "BY_CONTENT", "BY_VALUE", "THROUGH", "TIMES", 
			"RETURNING", "AS_PRIMITIVE", "AS_STRUCT", "PICTURE", "IS", "LIKE", "OCCURS", 
			"ALSO", "VARYING", "WHILE", "UNTIL", "WHEN", "OTHER", "STOP", "PROCEDURE_DIVISION", 
			"ZERO", "AND", "OR", "NOT", "MATH_OP", "EQ_OP", "EQ", "NEQ", "LEQ", "GEQ", 
			"GT", "LT", "INTEGERLITERAL", "NUMERICLITERAL", "IDENTIFIER", "LETTER", 
			"DIGIT", "ALPHANUMERIC", "NONNUMERICLITERAL", "WS", "DOT", "COMMA", "SOL", 
			"EOL", "SIGN", "LPAREN", "RPAREN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CoBabyBoL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoBabyBoLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Identification_divisionContext identification_division() {
			return getRuleContext(Identification_divisionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CoBabyBoLParser.EOF, 0); }
		public Data_divisionContext data_division() {
			return getRuleContext(Data_divisionContext.class,0);
		}
		public Procedure_divisionContext procedure_division() {
			return getRuleContext(Procedure_divisionContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoBabyBoLVisitor ) return ((CoBabyBoLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			identification_division();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DATA_DIVISION) {
				{
				setState(97);
				data_division();
				}
			}

			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROCEDURE_DIVISION) {
				{
				setState(100);
				procedure_division();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(103);
				function();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Identification_divisionContext extends ParserRuleContext {
		public TerminalNode SOL() { return getToken(CoBabyBoLParser.SOL, 0); }
		public TerminalNode IDENTIFICATION_DIVISION() { return getToken(CoBabyBoLParser.IDENTIFICATION_DIVISION, 0); }
		public TerminalNode EOL() { return getToken(CoBabyBoLParser.EOL, 0); }
		public List<Identification_clauseContext> identification_clause() {
			return getRuleContexts(Identification_clauseContext.class);
		}
		public Identification_clauseContext identification_clause(int i) {
			return getRuleContext(Identification_clauseContext.class,i);
		}
		public Identification_divisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identification_division; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).enterIdentification_division(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).exitIdentification_division(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoBabyBoLVisitor ) return ((CoBabyBoLVisitor<? extends T>)visitor).visitIdentification_division(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Identification_divisionContext identification_division() throws RecognitionException {
		Identification_divisionContext _localctx = new Identification_divisionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identification_division);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(SOL);
			setState(112);
			match(IDENTIFICATION_DIVISION);
			setState(113);
			match(EOL);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(114);
					identification_clause();
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Identification_clauseContext extends ParserRuleContext {
		public Clause_nameContext clause_name() {
			return getRuleContext(Clause_nameContext.class,0);
		}
		public List<TerminalNode> EOL() { return getTokens(CoBabyBoLParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(CoBabyBoLParser.EOL, i);
		}
		public Clause_valueContext clause_value() {
			return getRuleContext(Clause_valueContext.class,0);
		}
		public Identification_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identification_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).enterIdentification_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).exitIdentification_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoBabyBoLVisitor ) return ((CoBabyBoLVisitor<? extends T>)visitor).visitIdentification_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Identification_clauseContext identification_clause() throws RecognitionException {
		Identification_clauseContext _localctx = new Identification_clauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identification_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			clause_name();
			setState(121);
			match(EOL);
			setState(122);
			clause_value();
			setState(123);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Clause_nameContext extends ParserRuleContext {
		public TerminalNode PROGRAM_ID() { return getToken(CoBabyBoLParser.PROGRAM_ID, 0); }
		public TerminalNode AUTHOR() { return getToken(CoBabyBoLParser.AUTHOR, 0); }
		public TerminalNode INSTALLATION() { return getToken(CoBabyBoLParser.INSTALLATION, 0); }
		public TerminalNode DATE_WRITTEN() { return getToken(CoBabyBoLParser.DATE_WRITTEN, 0); }
		public TerminalNode DATE_COMPILED() { return getToken(CoBabyBoLParser.DATE_COMPILED, 0); }
		public TerminalNode SECURITY() { return getToken(CoBabyBoLParser.SECURITY, 0); }
		public TerminalNode IDENTIFIER() { return getToken(CoBabyBoLParser.IDENTIFIER, 0); }
		public Clause_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clause_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).enterClause_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).exitClause_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoBabyBoLVisitor ) return ((CoBabyBoLVisitor<? extends T>)visitor).visitClause_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Clause_nameContext clause_name() throws RecognitionException {
		Clause_nameContext _localctx = new Clause_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_clause_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(((((_la - 38)) & ~0x3f) == 0 && ((1L << (_la - 38)) & 70368744177727L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Clause_valueContext extends ParserRuleContext {
		public AtomicContext atomic() {
			return getRuleContext(AtomicContext.class,0);
		}
		public Clause_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clause_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).enterClause_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).exitClause_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoBabyBoLVisitor ) return ((CoBabyBoLVisitor<? extends T>)visitor).visitClause_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Clause_valueContext clause_value() throws RecognitionException {
		Clause_valueContext _localctx = new Clause_valueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_clause_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			atomic();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Procedure_divisionContext extends ParserRuleContext {
		public TerminalNode PROCEDURE_DIVISION() { return getToken(CoBabyBoLParser.PROCEDURE_DIVISION, 0); }
		public TerminalNode EOL() { return getToken(CoBabyBoLParser.EOL, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public Procedure_divisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure_division; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).enterProcedure_division(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).exitProcedure_division(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoBabyBoLVisitor ) return ((CoBabyBoLVisitor<? extends T>)visitor).visitProcedure_division(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Procedure_divisionContext procedure_division() throws RecognitionException {
		Procedure_divisionContext _localctx = new Procedure_divisionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_procedure_division);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(PROCEDURE_DIVISION);
			setState(130);
			match(EOL);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3371846876L) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & 50331649L) != 0)) {
				{
				{
				setState(131);
				sentence();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public TerminalNode EOL() { return getToken(CoBabyBoLParser.EOL, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoBabyBoLVisitor ) return ((CoBabyBoLVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3371846876L) != 0) || _la==STOP || _la==SOL) {
				{
				{
				setState(137);
				statement();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public AcceptContext accept() {
			return getRuleContext(AcceptContext.class,0);
		}
		public AlterContext alter() {
			return getRuleContext(AlterContext.class,0);
		}
		public GotoContext goto_() {
			return getRuleContext(GotoContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public PerformContext perform() {
			return getRuleContext(PerformContext.class,0);
		}
		public SignalContext signal() {
			return getRuleContext(SignalContext.class,0);
		}
		public CopyContext copy() {
			return getRuleContext(CopyContext.class,0);
		}
		public DisplayContext display() {
			return getRuleContext(DisplayContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public DivideContext divide() {
			return getRuleContext(DivideContext.class,0);
		}
		public MoveContext move() {
			return getRuleContext(MoveContext.class,0);
		}
		public MultiplyContext multiply() {
			return getRuleContext(MultiplyContext.class,0);
		}
		public SubtractContext subtract() {
			return getRuleContext(SubtractContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public EvaluateContext evaluate() {
			return getRuleContext(EvaluateContext.class,0);
		}
		public Next_sentenceContext next_sentence() {
			return getRuleContext(Next_sentenceContext.class,0);
		}
		public StopContext stop() {
			return getRuleContext(StopContext.class,0);
		}
		public TerminalNode SOL() { return getToken(CoBabyBoLParser.SOL, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoBabyBoLVisitor ) return ((CoBabyBoLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SOL) {
				{
				setState(145);
				match(SOL);
				}
			}

			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ACCEPT:
				{
				setState(148);
				accept();
				}
				break;
			case ALTER:
				{
				setState(149);
				alter();
				}
				break;
			case GOTO:
				{
				setState(150);
				goto_();
				}
				break;
			case IF:
				{
				setState(151);
				if_();
				}
				break;
			case PERFORM:
				{
				setState(152);
				perform();
				}
				break;
			case SIGNAL:
				{
				setState(153);
				signal();
				}
				break;
			case COPY:
				{
				setState(154);
				copy();
				}
				break;
			case DISPLAY:
				{
				setState(155);
				display();
				}
				break;
			case CALL:
				{
				setState(156);
				call();
				}
				break;
			case ADD:
				{
				setState(157);
				add();
				}
				break;
			case DIVIDE:
				{
				setState(158);
				divide();
				}
				break;
			case MOVE:
				{
				setState(159);
				move();
				}
				break;
			case MULTIPLY:
				{
				setState(160);
				multiply();
				}
				break;
			case SUBTRACT:
				{
				setState(161);
				subtract();
				}
				break;
			case LOOP:
				{
				setState(162);
				loop();
				}
				break;
			case EVALUATE:
				{
				setState(163);
				evaluate();
				}
				break;
			case NEXT_SENTENCE:
				{
				setState(164);
				next_sentence();
				}
				break;
			case STOP:
				{
				setState(165);
				stop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Data_divisionContext extends ParserRuleContext {
		public TerminalNode DATA_DIVISION() { return getToken(CoBabyBoLParser.DATA_DIVISION, 0); }
		public TerminalNode EOL() { return getToken(CoBabyBoLParser.EOL, 0); }
		public List<Data_itemContext> data_item() {
			return getRuleContexts(Data_itemContext.class);
		}
		public Data_itemContext data_item(int i) {
			return getRuleContext(Data_itemContext.class,i);
		}
		public Data_divisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_division; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).enterData_division(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoBabyBoLListener ) ((CoBabyBoLListener)listener).exitData_division(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoBabyBoLVisitor ) return ((CoBabyBoLVisitor<? extends T>)visitor).visitData_division(this);
			else return visitor.visitChildren(this);
		}
	}
